tests/gen-derivation/derivation/core/norec t-p.->.. w_ext 002/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Target type `b` is not a top-level data definition

DerivedGen:9:31--9:34
 5 | %default total
 6 | 
 7 | %language ElabReflection
 8 | 
 9 | checkedGen : Fuel -> (Fuel -> Gen CanBeEmptyStatic b) => (Fuel -> Gen CanBeEmptyStatic a) => Gen CanBeEmptyStatic (a, b)
                                   ^^^

